--- a/App-android/AggregateScankt/app/src/main/res/layout/activity_main.xml
+++ b/App-android/AggregateScankt/app/src/main/res/layout/activity_main.xml
@@ -17,21 +17,11 @@
 
     </androidx.camera.view.PreviewView>
 
-    <Button
-        android:id="@+id/btn_folder"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:elevation="2dp"
-        android:text="@string/str_folder"
-        app:layout_constraintBottom_toTopOf="@+id/btn_about"
-        app:layout_constraintEnd_toEndOf="@+id/btn_about"
-        app:layout_constraintStart_toStartOf="@+id/btn_about" />
-
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:contentDescription="@string/str_target_description"
         app:layout_constraintBottom_toBottomOf="@+id/viewFinder"
         app:layout_constraintEnd_toEndOf="@+id/viewFinder"
         app:layout_constraintStart_toStartOf="@+id/viewFinder"
@@ -41,30 +31,120 @@
     <Button
         android:id="@+id/btn_connect"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_marginBottom="8dp"
+        android:paddingStart="2dp"
+        android:paddingEnd="2dp"
         android:text="@string/str_connect"
+        android:textSize="18sp"
+        android:textColor="@color/black"
+        android:drawableStart="@drawable/baseline_bluetooth_24"
+        android:background="@drawable/custom_button"
         app:layout_constraintBottom_toTopOf="@+id/tv_folder"
         app:layout_constraintEnd_toEndOf="@+id/btn_about"
         app:layout_constraintStart_toStartOf="@+id/btn_about" />
-
-    <Button
-        android:id="@+id/btn_about"
-        android:layout_width="90dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        android:text="@string/str_about"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
         android:id="@+id/tv_folder"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Default"
+        android:text="@string/str_default"
         android:textColor="@color/txt_white"
         app:layout_constraintBottom_toTopOf="@+id/btn_folder"
         app:layout_constraintEnd_toEndOf="@+id/btn_about" />
+
+    <Button
+        android:id="@+id/btn_folder"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:layout_marginBottom="8dp"
+        android:paddingStart="2dp"
+        android:paddingEnd="2dp"
+        android:text="@string/str_folder"
+        android:textSize="18sp"
+        android:textColor="@color/black"
+        android:drawableStart="@drawable/baseline_create_24"
+        android:background="@drawable/custom_button"
+        app:layout_constraintBottom_toTopOf="@+id/btn_about"
+        app:layout_constraintEnd_toEndOf="@+id/btn_about"
+        app:layout_constraintStart_toStartOf="@+id/btn_about" />
+
+    <Button
+        android:id="@+id/btn_about"
+        android:layout_width="120dp"
+        android:layout_height="50dp"
+        android:layout_marginBottom="8dp"
+        android:paddingStart="2dp"
+        android:paddingEnd="2dp"
+        android:text="@string/str_about"
+        android:textSize="18sp"
+        android:textColor="@color/black"
+        android:drawableStart="@drawable/info"
+        android:background="@drawable/custom_button"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <TextView
+        android:id="@+id/tv_status"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/str_status"
+        android:textStyle="bold"
+        android:textColor="@color/purple_200"
+        android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/tv_scanstatus"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/str_scan"
+        android:textStyle="bold"
+        android:textColor="@color/txt_white"
+        android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_status" />
+
+    <TextView
+        android:id="@+id/tv_statusscan"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/str_waiting"
+        android:textColor="@color/txt_white"
+        android:textSize="14sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_scanstatus"/>
+
+    <TextView
+        android:id="@+id/tc_camerastatus"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/str_camera"
+        android:textStyle="bold"
+        android:textColor="@color/txt_white"
+        android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_statusscan" />
+
+    <TextView
+        android:id="@+id/tv_statuscamera"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/str_waiting"
+        android:textColor="@color/txt_white"
+        android:textSize="14sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tc_camerastatus" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
