--- a/App-android/AggregateScankt/app/src/main/res/drawable/button_normal.xml
+++ b/App-android/AggregateScankt/app/src/main/res/drawable/button_normal.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-
+    <solid android:color="@color/teal_700"/> <!-- Cor do botão normal -->
+    <corners android:radius="8dp"/> <!-- Bordas arredondadas -->
 </shape>
