--- a/App-android/AggregateScankt/app/src/main/res/drawable/button_pressed.xml
+++ b/App-android/AggregateScankt/app/src/main/res/drawable/button_pressed.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#4CAF50"/> <!-- Cor do botão normal -->
+    <solid android:color="@color/teal_700_pressed"/> <!-- Cor do botão pressionado -->
     <corners android:radius="8dp"/> <!-- Bordas arredondadas -->
 </shape>
