--- a/App-android/AggregateScankt/app/src/main/res/layout/paired_devices.xml
+++ b/App-android/AggregateScankt/app/src/main/res/layout/paired_devices.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -9,7 +8,7 @@
         android:id="@+id/list_view_dialog"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:listSelector="@color/purple_200"
+        android:listSelector="@color/teal_700"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
