--- a/App-android/AggregateScankt/app/src/main/res/layout/splash_screen.xml
+++ b/App-android/AggregateScankt/app/src/main/res/layout/splash_screen.xml
@@ -5,14 +5,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SplashScreen">
+    tools:context=".SplashScreen"
+    android:background="#000000">
 
   <TextView
       android:id="@+id/textView"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/splash_screen"
-      android:textAppearance="@style/TextAppearance.AppCompat.Display2"
+      android:textColor="@color/txt_white"
+      android:textSize="50sp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
