--- a/App-android/AggregateScankt/app/src/main/res/values/colors.xml
+++ b/App-android/AggregateScankt/app/src/main/res/values/colors.xml
@@ -10,4 +10,10 @@
 
     <color name="txt_black">#23282B</color>
     <color name="txt_white">#dcd7d4</color>
+
+    <color name="txt_sent">#00CC00</color>
+    <color name="txt_listening">#FFD700</color>
+    <color name="txt_received">#1E90FF</color>
+
+    <color name="teal_700_pressed">#D4006E71</color>
 </resources>
