--- a/App-android/AggregateScankt/app/src/main/res/values/colors.xml
+++ b/App-android/AggregateScankt/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="txt_black">#23282B</color>
     <color name="txt_white">#dcd7d4</color>
 
+    <color name="txt_sending">#FFA500</color>
     <color name="txt_sent">#00CC00</color>
     <color name="txt_listening">#FFD700</color>
     <color name="txt_received">#1E90FF</color>
